# renri

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  ROADMAP.md  apm.lock.yaml  apm.yml  claude-skill.md  renri.toml
.apm/skills/renri/: SKILL.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.kata/: applied.toml
src/: config.rs  discovery.rs  layout.rs  lib.rs  main.rs  path_display.rs  picker.rs  pr_cache.rs  shell_init.rs  updater.rs
src/hooks/: command.rs  copy.rs  mod.rs  symlink.rs
src/vcs/: detect.rs  git.rs  jj.rs  mod.rs
