[package]
name = "renri"
version = "0.1.12"
edition = "2024"
rust-version = "1.85"
authors = ["yukimemi <yukimemi@gmail.com>"]
license = "MIT"
description = "Unified manager for git worktrees and jujutsu workspaces, configured with teravars"
repository = "https://github.com/yukimemi/renri"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "worktree", "jujutsu", "jj", "workspace"]

[dependencies]
teravars = { version = "0.1.4", features = ["merge"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
whoami = "1"
serde_json = "1"
owo-colors = "4"
semver = "1"
tempfile = "3"
humantime = "2"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
self_update = { version = "0.44", default-features = false, features = [
    "reqwest",
    "rustls",
    "compression-flate2",
    "archive-tar",
    "archive-zip",
    "compression-zip-deflate",
] }

[dev-dependencies]
pretty_assertions = "1"
