[package]
name = "renri"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["yukimemi <yukimemi@gmail.com>"]
license = "MIT"
description = "Unified manager for git worktrees and jujutsu workspaces, configured with teravars"
repository = "https://github.com/yukimemi/renri"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "worktree", "jujutsu", "jj", "workspace"]

[dependencies]
teravars = { version = "0.2.1", features = ["merge"] }
clap = { version = "4.6.2", features = ["derive"] }
clap_complete = "4.6.7"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
anyhow = "1.0.103"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dirs = "6"
whoami = "2.1.2"
serde_json = "1.0.150"
owo-colors = "4.3.0"
kaishin = "0.6.3"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "time", "macros"] }
semver = "1.0.28"
tempfile = "3.27.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
